Fix carousel controls z-index

--- a/public/frontend/styles/carousel.css
+++ b/public/frontend/styles/carousel.css
@@ -67,7 +67,7 @@
   position: absolute;
   top: 40%;
   left: 0;
-  z-index: 10;
+  z-index: 1;
   padding: 0 2rem;
 }
 
